<resources>
    <string name="app_name">MyStory</string>
    <string name="UserName">UserName</string>
    <string name="PassWord">PassWord</string>
    <string name="Login">Login</string>
    <string name="i_accept_terms">i accept Terms and Conditions</string>
    <string name="forget_Password">Forget Password</string>
    <string name="Home">Home</string>
    <string name="LogOut">LogOut</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="this_is_firstTitle">First Story </string>
    <string name="this_is_firstDescription">First Description ilearn kotlin First Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlinFirst Description ilearn kotlin ilove Kotlin... </string>
    <string name="this_is_firstSubtiltle">First subtitle</string>
    <string name="this_is_SecondTiltle">Second subtitle</string>
    <string name="this_is_SecondSubtiltle">Second subtitle</string>
    <string name="this_is_SecondDiscription">Second description ilearn kotlin Second description ilearn kotlinSecond description ilearn kotlinSecond description ilearn kotlin </string>

    <string name="this_is_thirdTiltle">Third Title</string>
    <string name="this_is_thirdSubTiltle">Third SubTitle</string>
    <string name="this_is_thirdDescription">Third Description</string>

    <string name="icon_language">English</string>

    <string name="add_story">Add Story</string>
    <string name="Enter_titleHere">Enter Title Here </string>
    <string name="Enter_SubTitleHere">Enter Subtitle Here </string>
    <string name="add_description">Add Description </string>


</resources>